# painel_monitoramento_hidrometros

./: ADAPTER_PATTERN.md  CMakeLists.txt  README.md
include/: AlertService.hpp  CLI.hpp  DB.hpp  EmailNotificacaoStrategy.hpp  Fachada.hpp  ILeituraStrategy.hpp  IMonitoramentoMediator.hpp  INotificacaoStrategy.hpp  IObserver.hpp  IOcrAdapter.hpp  IPerfil.hpp  ISubject.hpp  LeituraEstaticaStrategy.hpp  Logger.hpp  MonitoramentoBanco.hpp  MonitoramentoConcretoMediator.hpp  MonitoramentoService.hpp  NotificacaoService.hpp  OcrStrategyFactory.hpp  PerfilFactory.hpp  PerfilManager.hpp  PerfisConcretos.hpp  SMSNotificacaoStrategy.hpp  TesseractOcrAdapter.hpp  User.hpp  UserBuilder.hpp  UsuarioService.hpp  WebhookNotificacaoStrategy.hpp
src/: AlertService.cpp  CLI.cpp  DB.cpp  EmailNotificacaoStrategy.cpp  Fachada.cpp  LeituraEstaticaStrategy.cpp  Logger.cpp  MonitoramentoBanco.cpp  MonitoramentoConcretoMediator.cpp  MonitoramentoService.cpp  NotificacaoService.cpp  OcrStrategyFactory.cpp  PerfilManager.cpp  SMSNotificacaoStrategy.cpp  TesseractOcrAdapter.cpp  UserBuilder.cpp  UsuarioService.cpp  WebhookNotificacaoStrategy.cpp  find_roi.cpp  main.cpp
